--- a/test/fixtures/donations.yml
+++ b/test/fixtures/donations.yml
@@ -4,8 +4,44 @@
 # model remove the '{}' from the fixture names and add the columns immediately
 # below each fixture, per the syntax in the comments below
 #
-one: {}
-# column: value
-#
-two: {}
-# column: value
+default_user_donation:
+  user: default_user
+  name: Default User Donation
+  description: This is a donation. It was donated, by a user. ???
+  fresh_until: 12-31-2100
+  latitude: 100
+  longitude: -100
+  pickup_notes: These are default pickup notes. They are useful, trust me.
+  is_perishable: true
+  requires_preparation: true
+  is_vegetarian: true
+  is_vegan: true
+  is_gluten_free: true
+  contains_peanut: true
+  contains_treenut: true
+  contains_dairy: true
+  contains_soy: true
+  contains_egg: true
+  contains_fish: true
+  contains_shellfish: true
+
+default_business_user_donation:
+  user: default_business_user
+  name: Default Business User Donation
+  description: This is a donation. It was donated, by a bussiness user. ???
+  fresh_until: 1-1-1000
+  latitude: 1
+  longitude: -1
+  pickup_notes: These are default pickup notes. Does anyone even read these?
+  is_perishable: false
+  requires_preparation: false
+  is_vegetarian: false
+  is_vegan: false
+  is_gluten_free: false
+  contains_peanut: false
+  contains_treenut: false
+  contains_dairy: false
+  contains_soy: false
+  contains_egg: false
+  contains_fish: false
+  contains_shellfish: false
