--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,9 @@
 language: ruby
+before_install:
+- google-chrome-stable --headless
 script:
 - bundle install
 - bundle exec rails db:create
 - bundle exec rails db:migrate
 - bundle exec rails test
 - bundle exec rails test:system
-addons:
-- chrome: stable
