--- a/.travis.yml
+++ b/.travis.yml
@@ -9,5 +9,4 @@ script:
 - bundle install
 - bundle exec rails db:create
 - bundle exec rails db:migrate
-- bundle exec rails test
-- bundle exec rails test:system
+- bundle exec rails test && bundle exec rails test:system
