--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,10 @@
 sonar.projectKey=addisonmartin_share-the-food
 sonar.projectName=Share the Food
 sonar.projectVersion=1.0
-sonar.sources=.
-# Encoding of the source code.
+sonar.sources=app/
 sonar.sourceEncoding=UTF-8
+
+sonar.tests=app/test/
+sonar.ruby.file.suffixes=rb,ruby
+sonar.ruby.coverage.reportPath=coverage/.resultset.json
+sonar.ruby.coverage.framework=RSpec
