--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -4,7 +4,7 @@ sonar.projectVersion=1.0
 sonar.sources=app/
 sonar.sourceEncoding=UTF-8
 
-sonar.tests=app/test/
+sonar.tests=test/
 sonar.ruby.file.suffixes=rb,ruby
 sonar.ruby.coverage.reportPath=coverage/.resultset.json
 sonar.ruby.coverage.framework=RSpec
