--- a/.travis.yml
+++ b/.travis.yml
@@ -14,4 +14,4 @@ script:
 - bundle exec rails db:create
 - bundle exec rails db:migrate
 - sonar-scanner
-- bundle exec rails test && bundle exec rails test:system
+- bundle exec rubocop && bundle exec rails test && bundle exec rails test:system
