--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -7,4 +7,4 @@ sonar.sourceEncoding=UTF-8
 sonar.tests=test/
 sonar.ruby.file.suffixes=rb,ruby
 sonar.ruby.coverage.reportPath=coverage/.resultset.json
-sonar.ruby.coverage.framework=RSpec
+sonar.ruby.coverage.framework=rails test && rails test:system
