--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,10 +1,10 @@
 sonar.projectKey=addisonmartin_share-the-food
 sonar.projectName=Share the Food
 sonar.projectVersion=1.0
-sonar.sources=app/
+sonar.sources=app/, config/, db/
+sonar.exclusions=app/assets/*
 sonar.sourceEncoding=UTF-8
 
 sonar.tests=test/
 sonar.ruby.file.suffixes=rb,ruby
 sonar.ruby.coverage.reportPath=coverage/.resultset.json
-sonar.ruby.coverage.framework=rails test && rails test:system
