Sonarqube test coverage updates

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,8 +1,8 @@
 sonar.projectKey=addisonmartin_share-the-food
 sonar.projectName=Share the Food
 sonar.projectVersion=1.0
-sonar.sources=app/, config/, db/
-sonar.exclusions=app/assets/*
+sonar.sources=app/controllers, app/helpers, app/models, app/views, config, db
+sonar.exclusions=app/assets, test
 sonar.sourceEncoding=UTF-8
 
 sonar.tests=test/
