Added erb to sonar

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -6,5 +6,5 @@ sonar.exclusions=app/assets, test
 sonar.sourceEncoding=UTF-8
 
 sonar.tests=test/
-sonar.ruby.file.suffixes=rb,ruby
+sonar.ruby.file.suffixes=rb,ruby, erb
 sonar.ruby.coverage.reportPath=coverage/.resultset.json
