Trying to get test coverage for html.erb files

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -7,5 +7,5 @@ sonar.sourceEncoding=UTF-8
 
 
 sonar.tests=test/
-sonar.ruby.file.suffixes=rb,ruby,**/*.erb
+sonar.ruby.file.suffixes=rb,ruby,html.erb
 sonar.ruby.coverage.reportPath=coverage/.resultset.json
