Finished test for deleting donation

--- a/test/fixtures/donations.yml
+++ b/test/fixtures/donations.yml
@@ -53,6 +53,27 @@ default_user_donation:
   contains_fish: true
   contains_shellfish: true
 
+donation_for_delete_test:
+  user: default_user
+  name: Donation to be Deleted
+  description: This is a donation. It won't exist forever.
+  fresh_until: 12-31-2100
+  latitude: 100
+  longitude: -100
+  pickup_notes: Pickup notes with info in them, trust me.
+  is_perishable: true
+  requires_preparation: false
+  is_vegetarian: true
+  is_vegan: false
+  is_gluten_free: true
+  contains_peanut: false
+  contains_treenut: true
+  contains_dairy: false
+  contains_soy: true
+  contains_egg: false
+  contains_fish: true
+  contains_shellfish: false
+
 default_business_user_donation:
   user: default_business_user
   name: Default Business User Donation
