--- a/test/fixtures/donations.yml
+++ b/test/fixtures/donations.yml
@@ -24,6 +24,7 @@
 #  contains_shellfish   :boolean
 #  created_at           :datetime         not null
 #  updated_at           :datetime         not null
+#  discarded_at         :datetime
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
